--- a/ITDeskClient/src/index.html
+++ b/ITDeskClient/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/ed483375ce.js" crossorigin="anonymous"></script>
 </body>
 </html>
